{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 6,
  "lineage": "f42279ce-6d39-70c8-2fb9-48f809488b09",
  "resources": [
    {
      "module": "module.ec2_instance_1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "shwa_ec2_nano",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:047719640457:instance/i-0b2f0f5765762437b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b2f0f5765762437b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08287acd76d5fccbc"
              }
            ],
            "primary_network_interface_id": "eni-08287acd76d5fccbc",
            "private_dns": "ip-172-31-25-59.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.25.59",
            "public_dns": "ec2-54-164-43-73.compute-1.amazonaws.com",
            "public_ip": "54.164.43.73",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00913a2b307f4e924",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1056cd2d116303c",
            "tags": {
              "Name": "ShwaEC2Nano"
            },
            "tags_all": {
              "Name": "ShwaEC2Nano"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba274feb5a50b742"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719640457",
            "id": "i-0b2f0f5765762437b",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.ec2_instance_2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "shwa_ec2_micro",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:047719640457:instance/i-054dba840f52ee0c5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-054dba840f52ee0c5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09df6d6395bdf0298"
              }
            ],
            "primary_network_interface_id": "eni-09df6d6395bdf0298",
            "private_dns": "ip-172-31-25-126.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.25.126",
            "public_dns": "ec2-54-211-113-27.compute-1.amazonaws.com",
            "public_ip": "54.211.113.27",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0211217dcdb261eb9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1056cd2d116303c",
            "tags": {
              "Name": "ShwaEC2Micro"
            },
            "tags_all": {
              "Name": "ShwaEC2Micro"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba274feb5a50b742"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719640457",
            "id": "i-054dba840f52ee0c5",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.nacl_module",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "shwa_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719640457:network-acl/acl-01d8179e62f8ac4ab",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.3.0.0/18",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              }
            ],
            "id": "acl-01d8179e62f8ac4ab",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.3.0.0/18",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "047719640457",
            "region": "us-east-1",
            "subnet_ids": [],
            "tags": {
              "Name": "SHWA_NACL"
            },
            "tags_all": {
              "Name": "SHWA_NACL"
            },
            "vpc_id": "vpc-001e44a1e9b59727a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nacl_module.aws_vpc.shwa_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nacl_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shwa_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719640457:vpc/vpc-001e44a1e9b59727a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e44cf61a414d9dcc",
            "default_route_table_id": "rtb-06b33ed6aa48f833d",
            "default_security_group_id": "sg-031e9ce08ba8b5422",
            "dhcp_options_id": "dopt-03b320afe80c2c1f2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-001e44a1e9b59727a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b33ed6aa48f833d",
            "owner_id": "047719640457",
            "region": "us-east-1",
            "tags": {
              "Name": "SHWA_VPC"
            },
            "tags_all": {
              "Name": "SHWA_VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.sg_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shwaSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:047719640457:security-group/sg-0e0d6e312a382f45a",
            "description": "Security group for allowing SSH and HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0d6e312a382f45a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Inbound To My Application",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "shwaSG",
            "name_prefix": "",
            "owner_id": "047719640457",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0032defb83402db23"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "047719640457",
            "id": "sg-0e0d6e312a382f45a",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}